--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "5.1.1",
     "@stripe/stripe-js": "^1.25.0",
     "axios": "^0.26.1",
     "faunadb": "^4.5.2",
