--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "faunadb": "^4.5.2",
     "next": "12.1.0",
     "next-auth": "^4.3.1",
+    "prismic-dom": "^2.2.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
     "@types/node": "^17.0.22",
+    "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.41",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
