--- a/package.json
+++ b/package.json
@@ -23,12 +23,18 @@
     "stripe": "^8.211.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^17.0.22",
     "@types/prismic-dom": "^2.1.1",
     "@types/react": "^17.0.41",
+    "babel-jest": "^28.1.0",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "jest": "^28.1.0",
+    "jest-dom": "^4.0.0",
     "typescript": "^4.6.2"
   }
 }
