--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@prismicio/client": "5.1.1",
@@ -25,7 +26,7 @@
   "devDependencies": {
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
+    "@testing-library/react": "12.1.2",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^17.0.22",
     "@types/prismic-dom": "^2.1.1",
@@ -35,6 +36,7 @@
     "eslint-config-next": "12.1.0",
     "jest": "^28.1.0",
     "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^28.1.0",
     "typescript": "^4.6.2"
   }
 }
