--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "jest": "^28.1.0",
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^28.1.0",
+    "jest-mock": "^28.1.0",
+    "ts-jest": "^28.0.3",
     "typescript": "^4.6.2"
   }
 }
